# KaBot

./: .env  .replit  ARCHITECTURE.md  Auto_start.sh  README.md  Requests.txt  database_old.py  database_setup.sql  keep_alive.py  main.py  main_old.py  pyproject.toml  requirements.txt  restart.sh  start_bot.sh  start_kabot.bat  test_imports.py
attached_assets/: Pasted-Assunto-Documento-de-Design-e-Mec-nicas-para-um-assistente-de-Discord-chamado-KaBot-Este-um-docu-1749950049334_1749950049336.txt
cogs/: admin.py  ai_commands.py  external_apis.py  fun.py  utility.py
core/: bot.py  config.py  db_manager.py
events/: chat_handler.py  lifecycle.py
kabot/: __init__.py  cerebro_conversacional.py  radar_informacoes.py  sistema_memoria.py
services/: ai_service.py  external_service.py  tool_service.py
