[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "discord-py>=2.5.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "supabase>=2.15.3",
]
